<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Marcaje.EditMarcajeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--<Button
            android:id="@+id/buttonRegistro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Registra hora"
            android:layout_marginLeft="130dp"/>-->


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="10dp"
            android:hint="@string/hint_name"
            app:endIconMode="clear_text"
            app:helperText="@string/helper_required"
            app:startIconDrawable="@drawable/ic_baseline_access_alarm_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="false"



                android:inputType="date" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView

            android:id="@+id/tvSpinnerActividad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="150dp"
            android:layout_marginRight="20dp"
            android:text="Tipo de actividad"
            android:textSize="15dp"
            app:helperText="Obra Seleccionada" />

        <Spinner
            android:id="@+id/SpinnerActividades"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="160dp"></Spinner>


        <TextView

            android:id="@+id/tvSpinnerTipoObra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="240dp"
            android:layout_marginRight="20dp"
            android:text="Obra"
            android:textSize="15dp"
            app:helperText="Obra Seleccionada" />

        <Spinner
            android:id="@+id/SpinnerTipoObra"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="250dp"></Spinner>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/checkboxContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="300dp"
            android:layout_marginRight="20dp"

            app:helperText="Conceptos Complementarios">

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/label_1" />

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/label_2" />

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/label_3" />

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/label_4" />

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/label_5" />

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/label_6" />
        </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiMatricula"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="650dp"
        android:layout_marginRight="10dp"
        android:hint="@string/hint_matricula"


        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/ic_baseline_directions_car_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etMatricula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:inputType="textCapWords" />


    </com.google.android.material.textfield.TextInputLayout>


</RelativeLayout>

    </androidx.core.widget.NestedScrollView>